Removed extra files in web folder

--- a/tours.html
+++ b/tours.html
@@ -89,35 +89,35 @@
 		<!-- Slider -->
 		<div class="slider">
 			<ul class="rslides" id="slider">
-				<li class="first-slide w3ls">
+				<!-- <li class="first-slide w3ls">
 					<img src="images/slide-1.jpg" alt="TravelPedia">
-					<div class="wthreexperience">
+					<div class="wthreexperience"> -->
 						<!-- <div id="animated-example" class="animated fadeIn"></div> -->
-						<button onclick="myFunction()">Reload page</button>
+						<!-- <button onclick="myFunction()">Reload page</button>
 					</div>
-				</li>
-				<!-- <li class="second-slide aits">
+				</li> -->
+				 <!-- <li class="second-slide aits">
 					<img src="images/slide-2.jpg" alt="TravelPedia">
 					<div class="wthreexperience">
 						<div id="animated-example1" class="animated fadeIn"></div>
 						<button onclick="myFunction()">Reload page</button>
 					</div>
-				</li>
-				<li class="third-slide w3-agileits">
+				</li> -->
+				<!-- <li class="third-slide w3-agileits">
 					<img src="images/slide-3.jpg" alt="TravelPedia">
 					<div class="wthreexperience">
 						<div id="animated-example2" class="animated fadeIn"></div>
 						<button onclick="myFunction()">Reload page</button>
 					</div>
-				</li>
+				</li> -->
 				<li class="fourth-slide agileinfo">
 					<img src="images/slide-4.jpg" alt="TravelPedia">
 					<div class="wthreexperience">
-						<div id="animated-example3" class="animated fadeIn"></div>
+						<!-- <div id="animated-example3" class="animated fadeIn"></div> -->
 						<button onclick="myFunction()">Reload page</button>
 					</div>
 				</li>
-				<li class="fifth-slide wthree">
+				<!--<li class="fifth-slide wthree">
 					<img src="images/slide-5.jpg" alt="TravelPedia">
 					<div class="wthreexperience">
 						<div id="animated-example4" class="animated fadeIn"></div>
